[package]
name = "environment-variable-policy"
version = "2.0.1"
authors = [
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.25.0", default-features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = "0.13.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_yaml = "0.9"
rstest = "0.25.0"
