[workspace]
members = ["crates/*"]

[package]
authors = [
  "José Guilherme Vanz <jguilhermevanz@suse.com>",
  "Kubewarden Developers <cncf-kubewarden-maintainers@lists.cncf.io>",
]
edition = "2018"
name = "environment-variable-policy"
version = "3.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
criteria_policy_base = { path = "crates/criteria_policy_base", default-features = false, features = [
  "env_var",
] }
k8s-openapi = { version = "0.25.0", default-features = false, features = [
  "v1_32",
] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest     = "0.26.0"
serde_yaml = "0.9"
