[package]
name = "operators"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
const_format = "0.2"
kubewarden-policy-sdk = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
env_var = []
labels = []
annotations = []

[dev-dependencies]
rstest = "0.26.0"
serde_yaml = "0.9"
operators = { path = ".", features = ["env_var"] }
