[package]
edition = "2024"
name    = "criteria_policy_base"
version = "0.1.0"

[dependencies]
anyhow                = "1"
const_format          = "0.2"
kubewarden-policy-sdk = "0.14.6"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"

[features]
annotations = []
env_var     = []
labels      = []

[dev-dependencies]
# this is a transitive dependency of kubewarden-policy-sdk, we don't
# care about the specific version, we just have to enable the k8s' version feature
k8s-openapi = { version = "0", default-features = false, features = ["v1_32"] }
rstest      = "0.26.0"
serde_yaml  = "0.9"

# required to set at least one feature
criteria_policy_base = { path = ".", features = ["env_var"] }
